initial solution for problem 1

--- a/p8105_hw2_my2838.md
+++ b/p8105_hw2_my2838.md
@@ -3,3 +3,62 @@ Untitled
 Mia Yu
 2023-10-01
 
+# Problem 1
+
+First, clean the data in pols-month.csv.
+
+``` r
+pols_df = 
+  read.csv("data/fivethirtyeight_datasets/pols-month.csv") |>
+  separate(col = mon, into = c("year","month","day"), sep = "-") |>
+  mutate(
+    year = as.integer(year),
+    month = month(as.integer(month),label = TRUE),
+    gov_president = gov_gop + gov_dem,
+    sen_president = sen_gop + sen_dem,
+    rep_president = rep_gop + rep_dem,
+    date = paste(year, month, sep="-")
+  ) |>
+  select(-ends_with("dem"),-ends_with("gop"),-day,-year,-month)
+```
+
+Second, clean the data in snp.csv.
+
+``` r
+snp_df = 
+  read.csv("data/fivethirtyeight_datasets/snp.csv") |>
+  separate(col = date, into = c("month","day","year"), sep = "/") |>
+  mutate(year = as.integer(year)) |>
+  mutate(year = ifelse(year > 15, year + 1900, year + 2000),
+         month = month(as.integer(month),label = TRUE),
+         date = paste(year, month, sep="-")) |>
+  arrange(year, month) |>
+  select(-day, -year, -month)
+```
+
+Third, tidy the unemployment data.
+
+``` r
+unemployment_df = 
+  read_csv("data/fivethirtyeight_datasets/unemployment.csv",show_col_types = FALSE) |>
+  pivot_longer(
+    Jan:Dec,
+    names_to = "month", 
+    values_to = "unemployment"
+  ) |>
+  mutate(
+    year = as.integer(Year),
+    month = as.character(month),
+    unemployment = as.double(unemployment),
+    date = paste(year, month, sep="-")
+  ) |>
+  select(-Year,-year,-month)
+```
+
+``` r
+final_df = 
+  full_join(pols_df, snp_df, by = "date") |>
+  full_join(unemployment_df, by = "date") |>
+  separate(date, into = c("year","month"), sep = "-") |>
+  select( year, month, everything())
+```
