--- a/p8105_hw2_my2838.md
+++ b/p8105_hw2_my2838.md
@@ -14,7 +14,8 @@ pols_df =
     month = month(as.integer(month),label = TRUE),
     gov_president = gov_gop + gov_dem,
     sen_president = sen_gop + sen_dem,
-    rep_president = rep_gop + rep_dem,
+    rep_president = rep_gop + rep_dem) |>
+  mutate(
     date = paste(year, month, sep="-")
   ) |>
   select(-ends_with("dem"),-ends_with("gop"),-day,-year,-month)
@@ -121,6 +122,7 @@ Import, clean, and tidy the dataset of baseline demographics.
 baseline =
   read_csv("data/data_mci/MCI_baseline.csv", skip = 1, show_col_types = FALSE) |>
   janitor::clean_names() |>
+  filter(current_age < age_at_onset | age_at_onset == ".") |>
   mutate(
       sex = case_match(
       sex,
@@ -137,11 +139,11 @@ baseline =
     ## Caused by warning:
     ## ! NAs introduced by coercion
 
-*There are 483 participants were recruited, and 97 develop MCI.*
+*There are 479 participants were recruited, and 93 develop MCI.*
 
-*The average baseline age is 70.2628866*
+*The average baseline age is 70.4064516*
 
-*The proportion of women in the study are APOE4 carriers is 0.2985782*
+*The proportion of women in the study are APOE4 carriers is 0.3*
 
 Import, clean, and tidy the dataset of longitudinally observed biomarker
 values.
@@ -171,12 +173,12 @@ datasets.
 inn_data = inner_join(amyloid, baseline, by = "id")
 ```
 
-*We have 495 participants in the research. But only 474 participants
-appear in both datasets, which means there are 21 participants appear in
+*We have 495 participants in the research. But only 470 participants
+appear in both datasets, which means there are 25 participants appear in
 only the baseline or amyloid datasets.*
 
 *The resulting dataset of participants who appear in both baseline and
-amyloid datasets have 474 rows and 11 columns.*
+amyloid datasets have 470 rows and 11 columns.*
 
 Let’s save the result.
 
